--- a/package.json
+++ b/package.json
@@ -15,7 +15,8 @@
     "knox": "~0.8.9",
     "openbadges-bakery": "~1.0.2",
     "nunjucks": "~1.0.2",
-    "express": "~3.5.1"
+    "express": "~3.5.1",
+    "minstache": "~1.1.0"
   },
   "devDependencies": {}
 }
